--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/RikFreddo/hyaena-app#readme",
   "devDependencies": {
+    "jsdom": "^28.0.0",
     "vitest": "^4.0.18"
   }
 }
