--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hyaena-app",
-  "version": "0.25.7",
-  "description": "",
+  "version": "0.25.8",
+  "description": "Scientific Dental Microwear Analysis App",
   "main": "sw.js",
   "directories": {
     "test": "tests"
